tests/wpt/tests/third_party/test262/test/built-ins/NativeErrors/SyntaxError/instance-proto.js
// Copyright (C) 2015 André Bargull. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
es6id: 19.5.6.4
description: >
  The prototype of SyntaxError instances is SyntaxError.prototype.
info: |
  NativeError instances are ordinary objects that inherit properties
  from their NativeError prototype object and have an [[ErrorData]]
  internal slot whose value is undefined
---*/

assert.sameValue(Object.getPrototypeOf(new SyntaxError), SyntaxError.prototype);
